add migration to PostgreSQL database